# internal/pkg/docs/swagger.json
@@ -226,6 +226,48 @@
                 }
             }
         },
+        "/api/note/{id}": {
+            "get": {
+                "description": "Get one of notes of current user",
+                "tags": [
+                    "note"
+                ],
+                "summary": "Get one note",
+                "operationId": "get-note",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "note id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "note",
+                        "schema": {
+                            "$ref": "#/definitions/models.NoteForSwagger"
+                        }
+                    },
+                    "400": {
+                        "description": "incorrect id",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "note not found",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/note/{id}/delete": {
             "delete": {
                 "description": "Delete selected note of current user",
@@ -266,7 +308,7 @@
             }
         },
         "/api/note/{id}/edit": {
-            "put": {
+            "post": {
                 "description": "Create new note to current user",
                 "consumes": [
                     "application/json"
@@ -312,48 +354,6 @@
                     },
                     "401": {
                         "description": "Unauthorized"
-                    }
-                }
-            }
-        },
-        "/api/note/{id}/get": {
-            "get": {
-                "description": "Get one of notes of current user",
-                "tags": [
-                    "note"
-                ],
-                "summary": "Get one note",
-                "operationId": "get-note",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "note id",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "note",
-                        "schema": {
-                            "$ref": "#/definitions/models.NoteForSwagger"
-                        }
-                    },
-                    "400": {
-                        "description": "incorrect id",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized"
-                    },
-                    "404": {
-                        "description": "note not found",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
                     }
                 }
             }
